# peepapoop

./: .gitignore  README.md  pyproject.toml  voiceprints.json  wake_up.json
db/: 01_create_db_and_extension.sql
src/: app.py  awake.py  config.py  enroll_voice.py  main.py  mem_manager.py  spells.py  transcribe.py  wakeup.py  whos_voice.py
src/Peepapoop.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
